# clipboard-ultra

./: .gitignore  AGENTS.md  LICENSE  README.md  index.html  package-lock.json  package.json  settings.html  vite.config.ts
.github/workflows/: release.yml
scripts/: sync-version.js
src/: App.tsx  contentKind.ts  index.tsx  settings.tsx  theme.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/clipboard/: mod.rs  monitor.rs
src-tauri/src/commands/: mod.rs
src-tauri/src/db/: mod.rs  operations.rs
src-tauri/src/hotkey/: mod.rs
src-tauri/src/plugins/: mod.rs
src-tauri/src/tray/: mod.rs
src/components/: BoardBar.tsx  ClipboardItem.tsx  ClipboardList.tsx  SearchBar.tsx  Settings.tsx  SettingsPage.tsx  TagBar.tsx
src/hooks/: useClipboard.ts
src/styles/: global.css
