[package]
name = "clipboard-ultra"
version = "0.8.5"
description = "A lightweight cross-platform clipboard history manager"
authors = ["ZJUzengkun"]
license = "MIT"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "clipboard_ultra_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "protocol-asset", "devtools", "macos-private-api"] }
tauri-plugin-opener = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
clipboard-rs = "0.2"
sha2 = "0.10"
enigo = { version = "0.2", features = ["serde"] }
chrono = "0.4"
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "gif", "webp"] }
uuid = { version = "1", features = ["v4"] }
regex = "1"

[target.'cfg(target_os = "macos")'.dependencies]
core-graphics = "0.24"
core-foundation = "0.10"

[target.'cfg(target_os = "windows")'.dependencies]
windows-sys = { version = "0.59", features = ["Win32_Foundation", "Win32_UI_WindowsAndMessaging", "Win32_System_Threading", "Win32_System_ProcessStatus"] }

[profile.release]
codegen-units = 16    # 多单元并行 CodeGen，加速编译
lto = "thin"          # Thin LTO 比 Fat LTO 快很多，优化效果接近
opt-level = 2         # 编译快于 opt-level=3，运行时性能差异极小
strip = true          # 剥离调试符号，减小产物体积

